--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,31 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
+  background-image: url("./static/media/dots.b81dabc0.png");
+  min-height: 100vh;
+  background-color: #171941;
+  background-size: contain;
+  width: 100%;
 }
 
 .App-logo {
-  height: 20vmin;
+  height: 3rem;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  /* .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  } */
+  margin: 0.5rem auto 0.5rem 0.5rem;
 }
 
 .App-header {
   background-color: #171941;
-  min-height: 100vh;
+  min-height: 80px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 2rem);
   color: white;
 }
 
@@ -28,11 +33,103 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main__heading {
+  font-size: calc(10px + 1rem);
+  color: white;
+  text-align: left;
+  margin-left: 2vw;
+  margin-bottom: 2rem;
+  letter-spacing: 1px;
+}
+
+.main {
+  font-size: calc(15px + 1rem);
+  color: white;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 8rem;
+}
+
+.MoviesContainer {
+  width: 90%;
+  display: inline-grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  column-gap: 30px;
+  row-gap: 40px;
+}
+
+.MovieCard {
+  width: 100%;
+  min-width: 250px;
+  font-size: 1rem;
+  transition: all 0.3s;
+  position: relative;
+  box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+.MovieCard:hover {
+  transform: scale(1.1);
+}
+.MovieCard-meta {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  bottom: 0;
+  background: rgba(31, 34, 95);
+  width: 101%;
+  height: 20%;
+  opacity: 0;
+  transition: all 0.3s;
+  padding: 0.5rem;
+  transform: translateY(25px);
+}
+
+.MovieCard-meta-col1 {
+  /* border: 1px solid red; */
+  display: grid;
+  justify-content: space-between;
+}
+
+.MovieCard-meta-row2 {
+  display: grid;
+  /* justify-content: center; */
+}
+.MovieCard:hover .MovieCard-meta {
+  translate: 0;
+  opacity: 1;
+  transform: translateX(-1px);
+}
+
+.MovieCard-image {
+  width: 100%;
+}
+
+.title {
+  color: #fd5d93;
+  font-size: 1.1rem;
+  font-weight: normal;
+  margin: 0;
+  margin-bottom: 8px;
+}
+
+.category {
+  font-size: 1rem;
+  font-weight: lighter;
+  margin: 0;
+  color: #ff8d72;
+}
+
+.rating-icon {
+  display: flex;
+  align-items: center;
+  font-size: 0.8rem;
+}
+
+rating-icon:hover .rating-svg {
+  fill: white;
+}
+.rating-svg {
+  margin-right: 5px;
 }
