--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@
   transition: all 0.3s;
   position: relative;
   box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.1);
-  margin: 1rem 1rem;
+  margin: 15px 10px;
 }
 
 .MovieCard:hover {
