--- a/src/App.css
+++ b/src/App.css
@@ -16,13 +16,12 @@
 .App-logo {
   height: 3rem;
   pointer-events: none;
-  margin: 0.5rem auto 0.5rem 0.5rem;
+  margin: 10px auto 0 10px;
 }
 
 .App-header {
   min-height: 80px;
   display: flex;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2rem);
   color: white;
@@ -33,13 +32,17 @@
 }
 
 .filter {
-  margin-right: 30px;
+  margin: 0;
+  margin-right: 20px;
 }
 .filter-input {
   border-radius: 3px;
   height: 2rem;
   padding: 0 5px;
   font-size: 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 .main__heading {
